--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon -r esm ./src/server.js"
+    "start": "node ./src/server.js",
+    "start-dev": "nodemon -r esm ./src/server.js"
   },
   "author": "",
   "license": "ISC",
