fix start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./src/server.js",
+    "start": "node -r esm ./src/server.js",
     "start-dev": "nodemon -r esm ./src/server.js"
   },
   "author": "",
